--- a/assets/less/post.less
+++ b/assets/less/post.less
@@ -94,6 +94,7 @@
         margin-right: -2em;
         
         code {
+            font-size: 0.8em;
             border: none;
             
             word-wrap: break-word;  
